--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </nav><!-- .nav-menu -->
 
 <div class="social-links">
-<a href="https://www.instagram.com/js_hyun118/" target="_blank" class="Instagram"><i class="bx bxl-instagram"></i></a>
+<a href="https://www.instagram.com/js_hyun118/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+	  <a href="https://asked.kr/scottjsh" target="_blank" class="asked"><i class='bx bx-question-mark'></i></a>
           <a href="https://www.github.com/scottjsh" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:scottjsh@naver.com" target="_blank" class="google"><i class="bx bx-mail-send"></i></a>
 
