--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <li class="active"><a href="#header"> <span>Home</span></a></li>
   <li><a href="#about"> <span>About</span></a></li>
   <li><a href="https://m.blog.naver.com/scottjsh"> <span>Blog</span></a></li>
-  <li><a href="https://asked.kr/scottjsh"> <span>Asked</span></a></li?
+  <li><a href="https://asked.kr/scottjsh"> <span>Asked</span></a></li>
   <li><a href="#contacts"> <span>Contacts</span></a></li>
 
 </ul>
