--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span>.</h2>
 <nav class="nav-menu d-none d-lg-block">
 <ul>
-  <li class="active"><a href="#header"> <span>Home</span></a></li>
+  <li class="active"><a href="#home"> <span>Home</span></a></li>
   <li><a href="#about"> <span>About</span></a></li>
   <li><a href="https://m.blog.naver.com/scottjsh"> <span>Blog</span></a></li>
   <li><a href="https://asked.kr/scottjsh"> <span>Asked</span></a></li>
