--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-5BB8W2X');</script>
+})(window,document,'script','dataLayer','G-PGET702F54');</script>
 <!-- End Google Tag Manager -->
 <link rel="icon" type="image/png" href="/favicon.png"/>
 <meta charset="utf-8">
