--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       <div class="row">
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-		<p>Student developer with interest in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I want to be <strong>Developer</strong> or <strong>Dentist</strong>
+		<p>Student developer with interest in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I want to be <strong>Developer</strong> or <strong>Dentist</strong>.
           </p>
           <div class="row">
             <div class="col-lg-6">
