--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
 
       <div class="row">
+        <div class="col-lg-4" data-aos="fade-right">
+          <img src="assets/img/profile.gif" class="img-fluid" alt="">
+        </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 		<p>Student developer with interest in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I want to be <strong>Developer</strong> or <strong>Dentist</strong>.
           </p>
