--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       // favicon
         var faviconRoute = '/assets/favicon/';
         var faviconNames = ['favicon-0.png', 'favicon-1.png', 'favicon-2.png', 'favicon-3.png', 'favicon-4.png',
-                        'favicon-5.png', 'favicon-6.png', 'favicon-7png', 'favicon-8png', 'favicon-9.png',
+                        'favicon-5.png', 'favicon-6.png', 'favicon-7.png', 'favicon-8.png', 'favicon-9.png',
 			'favicon-10.png', 'favicon-11.png', 'favicon-12.png', 'favicon-13.png', 'favicon-14.png',
 			'favicon-15.png', 'favicon-16.png', 'favicon-17.png', 'favicon-18.png', 'favicon-19.png']
     
