--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+<!-- End Google Fonts -->
+	
 <!-- Vendor CSS Files -->
 <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -48,7 +49,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
 <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-
+<!-- End Vendor CSS Files -->
 
 
 <!-- Template Main CSS File -->
@@ -64,9 +65,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   gtag('config', 'G-PGET702F54');
 </script>
+<!-- End Google tag (gtag.js) -->
 
+<!-- Iconify Icon -->
 <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
-
+<!-- End Iconify Icon -->
 
 
 <!-- =======================================================
@@ -83,6 +86,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BB8W2X"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+	
 <!-- ======= Header ======= -->
 <header id="header" class="header-tops">
 
@@ -102,8 +106,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </nav><!-- .nav-menu -->
 
 <div class="social-links">
-<a href="https://www.instagram.com/js_hyun118/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-	  <a href="https://asked.kr/scottjsh" target="_blank" class="asked"><i class='bx bx-question-mark'></i></a>
+          <a href="https://www.instagram.com/js_hyun118/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+ 	  <a href="https://asked.kr/scottjsh" target="_blank" class="asked"><i class='bx bx-question-mark'></i></a>
           <a href="https://www.github.com/scottjsh" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:scottjsh@naver.com" target="_blank" class="google"><i class="bx bx-mail-send"></i></a>
 
@@ -129,7 +133,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3>Social Profiles</h3>
             <div class="social-links">
               <a href="https://www.instagram.com/js_hyun118/" target="_blank" class="Instagram"><i class="bx bxl-instagram"></i></a>
-	<a href="https://asked.kr/scottjsh" target="_blank" class="asked"><i class='bx bx-question-mark'></i></a>
+	      <a href="https://asked.kr/scottjsh" target="_blank" class="asked"><i class='bx bx-question-mark'></i></a>
               <a href="https://www.github.com/scottjsh" target="_blank" class="github"><i class="bx bxl-github"></i></a>
               <a href="mailto:scottjsh@naver.com" target="_blank" class="mail"><i class="bx bx-mail-send"></i></a>
 
@@ -207,10 +211,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       backSpeed: 65
     });
   </script>
-
+  <!-- End Vendor JS Files -->
+	  
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <!-- End Template Main JS File -->
+	  
 </body>
 
 </html>
