--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div class="container">
 
-<h1><a href="index.html">SeHyun Jun</a></h1>
+<h1><a href="/">SeHyun Jun</a></h1>
 <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span>.</h2>
 <nav class="nav-menu d-none d-lg-block">
 <ul>
