--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Student", "Developer", "Coder"],
+      strings: ["SeHyun Jun", "Student", "Developer", "Coder", "South Korean"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
