--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <li><a href="https://m.blog.naver.com/scottjsh" target="_blank"> <span>Blog</span></a></li>
   <li><a href="https://asked.kr/scottjsh" target="_blank"> <span>Asked</span></a></li>
   <li><a href="#contacts"> <span>Contacts</span></a></li>
+  <li><a href="https://www.metavv.com/ko/creator/10560250?_c=content" target="_blank"> <span>Metavv</span></a></li>
 
 </ul>
 </nav><!-- .nav-menu -->
