--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 <link rel="shortcut icon" href="/assets/favicon/favicon-0.png?" type="image/x-icon">
 <link id= "favicon" rel="icon" href="" type="image/x-icon">
+<!-- Favicon Gif
     <script>
       // favicon
         var faviconRoute = '/assets/favicon/';
@@ -29,6 +30,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             idx %= faviconNames.length;
         }
     </script>
+-->
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
