--- a/index.html
+++ b/index.html
@@ -169,10 +169,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-lg-4" data-aos="fade-right">
           <img src="assets/img/profile.gif" class="img-fluid" alt="">
         </div>
-        <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/nyan.jpg" class="img-fluid" alt="">
-        </div>
-        <div class="col-lg-8 pt-4 pt-lg-1 content" data-aos="fade-left">
+        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 	  <p>Student developer with interest in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I want to be <strong>Developer</strong> or <strong>Dentist</strong>.
           </p>
           <div class="row">
@@ -189,6 +186,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
           </div>
         </div>
+        <div class="col-lg-4" data-aos="fade-right">
+          <img src="assets/img/nyan.jpg" class="img-fluid" alt="">
+        </div>
+	<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+	  <p>I LOVE <strong><a href="https://instagram.com/i_am_young22" target="_blank">Hina</a></strong> ❤️
+          </p>
+	</div>
       </div>
 
     </div><!-- End About Me -->
