--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <img src="assets/img/profile.gif" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-	  <p>Student developer with interest in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I want to be <strong>Developer</strong> or <strong>Dentist</strong>.
+	  <p style="font-size: 24px">Student developer with interest in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I want to be <strong>Developer</strong> or <strong>Dentist</strong>.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -180,8 +180,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="col-lg-6">
               <ul>
-		<li><i class="icofont-rounded-right"></i> <strong>Nationality:</strong> South Korean</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> scottjsh@naver.com</li>
+		<li style="font-size: 24px"><i class="icofont-rounded-right"></i> <strong>Nationality:</strong> South Korean</li>
+                <li style="font-size: 24px"><i class="icofont-rounded-right"></i> <strong>Email:</strong> scottjsh@naver.com</li>
               </ul>
             </div>
           </div>
@@ -191,7 +191,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <img src="assets/img/nyan.jpg" class="img-fluid" alt="">
           </div>
 	  <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-	    <p>I LOVE <strong><a href="https://instagram.com/i_am_young22" target="_blank">Hina</a></strong> ❤️
+	    <p style="font-size: 36px">I LOVE <strong><a href="https://instagram.com/i_am_young22" target="_blank">Hina</a></strong>❤️
             </p>
 	  </div>
 	</div>
