--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 18 January 2007</li>
+                <li style="font-size: 24px"><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 18 January 2007</li>
               </ul>
             </div>
             <div class="col-lg-6">
