--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <img src="assets/img/profile.gif" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-	  <p style="font-size: 24px">Student developer with interest in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I want to be <strong>Developer</strong> or <strong>Dentist</strong>.
+	  <p style="font-size: 24px">Student developer with interest in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I want to be <strong>Developer</strong>.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -190,7 +190,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <img src="assets/img/nyan.jpg" class="img-fluid" alt="">
         </div>
 	<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-	  <p style="font-size: 30px">I LOVE <strong><a href="https://instagram.com/i_am_young22" target="_blank">Hina</a></strong>❤️
+	  <p style="font-size: 30px">I Love <strong><a href="https://instagram.com/i_am_young22" target="_blank">Hina</a></strong>❤️
           </p>
 	</div>
       </div>
