Miss random_img()

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-lg-4" data-aos="fade-right">
           <img name="randomImage" class="img-fluid" alt="">
         </div>
+	random_img()
 	<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 	  <p style="font-size: 30px">My Favorite <strong><a href="https://instagram.com/i_am_young22" target="_blank">Hina</a></strong>❤️
           </p>
