Missing Tag: </script>

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       num=Math.floor(Math.random()*7);
       document.randomImage.src="img/nyan"+num+".jpg";
     }
+  </script>
   <!-- End Random Image -->
 
 </body>
