--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <img src="assets/img/profile.gif" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-		  <p style="font-size: 24px">Student developer with interest in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I want to be <strong>Developer</strong>.
-          </p>
+		  <p style="font-size: 24px">Student developer with interest in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I want to be <strong>Developer</strong>.</p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
@@ -200,8 +199,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		random_img()
 		</script>
 		<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-		  <p style="font-size: 30px">My Favorite <strong><a href="https://instagram.com/i_am_young22" target="_blank">Hina</a></strong>❤️
-		  </p>
+		  <p style="font-size: 30px">I ❤️ <strong><a href="https://instagram.com/i_am_young22" target="_blank">Hina</a></strong></p>
+		  <p style="font-size: 30px"><a href='#' onclick="random_img()"><br><br><strong>Click Here</strong></a></p>
 		</div>
       </div>
 
