--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <img src="assets/img/profile.gif" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-		  <p style="font-size: 24px">Student developer with interest in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I want to be <strong>Developer</strong>.</p>
+		  <p style="font-size: 24px">Student developer interested in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I'm learning about <strong>AI</strong>, and <strong>Pytorch</strong> used for <strong>machine learning</strong>. I want to be <strong>Developer</strong> working on <strong>Security</strong>.</p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
@@ -200,11 +200,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		</script>
 		<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 		  <p style="font-size: 30px">I ❤️ <strong><a href="https://instagram.com/i_am_young22" target="_blank">Hina</a></strong></p>
-		  <p style="font-size: 30px"><a href='#' onclick="random_img()"><br><br><strong>Click Here</strong></a></p>
+		  <p style="font-size: 30px"><a href="javascript:void(0);" onclick="random_img()"><br><br><strong>Click Here</strong></a></p>
 		</div>
       </div>
 
-    </div><!-- End About Me -->
+    </div>
+	<!-- End About Me -->
+  </section>
+  <!-- End About Section -->
 
 
   <!-- Vendor JS Files -->
