--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span>.</h2>
       <nav class="nav-menu d-none d-lg-block">
 	    <ul>
-	      <li class="active"><a href="#header"> <span>Home</span></a></li>
+	      <li class="active"><a href="/"> <span>Home</span></a></li>
 	      <li><a href="#about"> <span>About</span></a></li>
 	      <li><a href="#contacts"> <span>Contacts</span></a></li>
 	      <li><a href="https://m.blog.naver.com/scottjsh" target="_blank"> <span>Blog</span></a></li>
