Change favicon location

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','G-PGET702F54');</script>
 <!-- End Google Tag Manager -->
-<link rel="shortcut icon" href="/assets/favicon/favicon-0.png" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 <link id= "favicon" rel="icon" href="" type="image/x-icon">
 <!-- Favicon Gif
 <script>
