Delete unnecessary part

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Iconify Icon -->
 
 <!-- Random Image -->
-<script language="javascript">
+<script>
   function random_img(){
     num=Math.floor(Math.random()*9);
     document.randomImage.src="assets/img/nyan"+num+".jpg";
