--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <img src="assets/img/profile.gif" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-		  <p style="font-size: 24px">Student developer interested in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I'm learning about <strong>AI</strong>, and <strong>Pytorch</strong> used for <strong>machine learning</strong>. I want to be <strong>Developer</strong> working on <strong>Security</strong>. Recently, however, I am very interested in <strong>aircraft pilot</strong>. Therefore, my career path may change.</p>
+		  <p style="font-size: 24px">Student developer interested in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I'm learning about <strong>AI</strong>, and <strong>Pytorch</strong> used for <strong>machine learning</strong>. I want to be <strong>Developer</strong> working on <strong>Security</strong>. Recently, however, I am very interested in <strong>aircraft pilot</strong>. Therefore, my career path may change. :)</p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
