--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <a href="https://www.instagram.com/js_hyun118/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
  	    <a href="https://asked.kr/scottjsh" target="_blank" class="asked"><i class='bx bx-question-mark'></i></a>
         <a href="https://www.github.com/scottjsh" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="mailto:scottjsh@naver.com" target="_blank" class="google"><i class="bx bx-envelope"></i></a>
+        <a href="mailto:scottjsh@whitesky.kr" target="_blank" class="google"><i class="bx bx-envelope"></i></a>
       </div>
     </div>
    </header>
@@ -142,7 +142,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="https://www.instagram.com/js_hyun118/" target="_blank" class="Instagram"><i class="bx bxl-instagram"></i></a>
 	          <a href="https://asked.kr/scottjsh" target="_blank" class="asked"><i class='bx bx-question-mark'></i></a>
               <a href="https://www.github.com/scottjsh" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-              <a href="mailto:scottjsh@naver.com" target="_blank" class="mail"><i class="bx bx-envelope"></i></a>
+              <a href="mailto:scottjsh@whitesky.kr" target="_blank" class="mail"><i class="bx bx-envelope"></i></a>
 
             </div>
           </div>
@@ -152,7 +152,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
-            <p>scottjsh@naver.com</p>
+            <p>scottjsh@whitesky.kr</p>
           </div>
         </div>
       </div>
@@ -223,7 +223,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["SeHyun Jun", "16yrs old", "Student", "preparing Pilot", "Developer"],
+      strings: ["SeHyun Jun", "17yrs old", "Student", "preparing Pilot", "Developer"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
