--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
  	<a href="https://asked.kr/scottjsh" target="_blank" class="asked"><i class='bx bx-question-mark'></i></a>
         <a href="https://www.github.com/scottjsh" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="mailto:scottjsh@whitesky.kr" target="_blank" class="google"><i class="bx bx-envelope"></i></a>
-	<a href="https://whitesky.kr/ValStreamOverlay/" target="_blank" class="valorant"><span class="simple-icons--valorant"></span></a>      
+	<a href="https://whitesky.kr/ValStreamOverlay/" target="_blank" class="valorant"><i class="simple-icons--valorant"></i></a>      
       </div>
     </div>
    </header>
