--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
       <div class="social-links">
         <a href="https://www.instagram.com/js_hyun118/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+	<a href="https://youtube.com/@scottjsh" target="_blank" class="youtube"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M21.593 7.203a2.506 2.506 0 0 0-1.762-1.766C18.265 5.007 12 5 12 5s-6.264-.007-7.831.404a2.56 2.56 0 0 0-1.766 1.778c-.413 1.566-.417 4.814-.417 4.814s-.004 3.264.406 4.814c.23.857.905 1.534 1.763 1.765c1.582.43 7.83.437 7.83.437s6.265.007 7.831-.403a2.515 2.515 0 0 0 1.767-1.763c.414-1.565.417-4.812.417-4.812s.02-3.265-.407-4.831M9.996 15.005l.005-6l5.207 3.005z"/></svg></a>
  	<a href="https://asked.kr/scottjsh" target="_blank" class="asked"><i class='bx bx-question-mark'></i></a>
         <a href="https://www.github.com/scottjsh" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="mailto:scottjsh@whitesky.kr" target="_blank" class="google"><i class="bx bx-envelope"></i></a>
