--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	      <li class="active"><a href="/"> <span>Home</span></a></li>
 	      <li><a href="#about"> <span>About</span></a></li>
 	      <li><a href="#contacts"> <span>Contacts</span></a></li>
+	      <li><a href="https://youtube.com/@scottjsh" target="_blank"> <span>YouTube</span></a></li>
 	      <li><a href="https://m.blog.naver.com/scottjsh" target="_blank"> <span>Blog</span></a></li>
 	      <li><a href="https://asked.kr/scottjsh" target="_blank"> <span>Asked</span></a></li>
-	      <li><a href="https://www.metavv.com/ko/creator/10560250?_c=content" target="_blank"> <span>Metavv</span></a></li>
    	    </ul>
       </nav><!-- .nav-menu -->
 
