--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-s<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
 
@@ -136,25 +136,30 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
       <div class="row mt-2">
 
-        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+        <div class="col-md-12 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
             <h3>Social Network</h3>
             <div class="social-links">
-              <a href="https://www.instagram.com/js_hyun118/" target="_blank" class="Instagram"><i class="bx bxl-instagram"></i></a>
-	          <a href="https://asked.kr/scottjsh" target="_blank" class="asked"><i class='bx bx-question-mark'></i></a>
-              <a href="https://www.github.com/scottjsh" target="_blank" class="github"><i class="bx bxl-github"></i></a>
               <a href="mailto:scottjsh@whitesky.kr" target="_blank" class="mail"><i class="bx bx-envelope"></i></a>
-
+              <a href="https://www.instagram.com/js_hyun118/" target="_blank" class="Instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://youtube.com/@scottjsh" target="_blank" class="youtube"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M9.935 14.628v-5.62l5.403 2.82zM21.8 8.035s-.195-1.379-.795-1.986c-.76-.796-1.613-.8-2.004-.847C16.203 5 12.004 5 12.004 5h-.008s-4.198 0-6.997.202c-.391.047-1.243.05-2.004.847c-.6.607-.795 1.986-.795 1.986S2 9.653 2 11.272v1.517c0 1.618.2 3.237.2 3.237s.195 1.378.795 1.985c.76.797 1.76.771 2.205.855c1.6.153 6.8.2 6.8.2s4.203-.006 7.001-.208c.391-.047 1.244-.05 2.004-.847c.6-.607.795-1.985.795-1.985s.2-1.619.2-3.237v-1.517c0-1.619-.2-3.237-.2-3.237"/></svg></a>
+	            <a href="https://asked.kr/scottjsh" target="_blank" class="asked"><i class='bx bx-question-mark'></i></a>
+              <a href="https://www.github.com/scottjsh" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+            
             </div>
           </div>
         </div>
 
-        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+        <div class="col-md-12 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
             <p>scottjsh@whitesky.kr</p>
+            <h3>Instagram</h3>
+            <p>@js_hyun118</p>
+            <h3>YouTube</h3>
+            <p>Usermode(@scottjsh)</p>
           </div>
         </div>
       </div>
