Add Valorant IGN on contact tab

--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <p>@js_hyun118</p>
             <h3>YouTube</h3>
             <p>Usermode(@scottjsh)</p>
+	    <h3>Valorant</h3>
+            <p>KVT ZEKI#Z3K1</p>
           </div>
         </div>
       </div>
