Update Profile img

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/profile.gif" class="img-fluid" alt="">
+          <img src="assets/img/profile.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 		  <p style="font-size: 24px">Student developer interested in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I'm learning about <strong>AI</strong>, and <strong>Pytorch</strong> used for <strong>machine learning</strong>. I want to be a <strong>Pilot</strong> working for <strong>AIR PREMIA</strong>. My career path has been changed!</p>
