--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["SeHyun Jun", "17yrs old", "Student", "preparing Pilot", "Developer"],
+      strings: ["SeHyun Jun", "17yrs old", "Student", "preparing for a Pilot", "Developer"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
