--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["SeHyun Jun", "17yrs old", "Student", "preparing for a Pilot", "Developer"],
+      strings: ["^500SeHyun Jun^300", "^500 17yrs old^300", "^500Student^300", "^500preparing for a Pilot^300", "^500Developer^300"],
       loop: true,
       typeSpeed: 65,
-      backSpeed: 65
+      backSpeed: 65,
     });
   </script>
   <!-- End Vendor JS Files -->
