--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <ul>
 		<li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 18 January 2007</li>
 	        <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Nationality:</strong> South Korean</li>
-                <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Email:</strong> scottjsh@naver.com</li>
+                <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Email:</strong> scottjsh@whitesky.kr</li>
               </ul>
             </div>
           </div>
