--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <img src="assets/img/profile.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-		  <p style="font-size: 24px">Student developer interested in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I'm learning about <strong>AI</strong>, and <strong>Pytorch</strong> used for <strong>machine learning</strong>. I want to be a <strong>Pilot</strong> working for <strong>AIR PREMIA</strong>. My career path has been changed!</p>
+		  <p style="font-size: 24px">Student developer interested in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I'm learning about <strong>AI</strong>, and <strong>Pytorch</strong> used for <strong>machine learning</strong>. I want to be a <strong>pilot</strong>. However, I got a <strong>pneumothorax</strong> and had a problem becoming a <strong>pilot</strong>. After entering the <strong>Korea Maritime University</strong>, not the <strong>Korea Aviation University</strong>, and raising funds through <strong>boarding ships for many years</strong>, I <strong>changed my plan</strong> to fill the flight time to join the airline. Entering straight to <strong>the Department of Aviation Operations</strong> does not have a <strong>Plan B</strong> when <strong>employment becomes impossible due to health</strong>.</p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
 		<li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 18 January 2007</li>
-	        <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Nationality:</strong> South Korean</li>
+	        <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Nationality:</strong> South Korea</li>
                 <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Email:</strong> scottjsh@whitesky.kr</li>
               </ul>
             </div>
