--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="https://www.instagram.com/js_hyun118/" target="_blank" class="Instagram"><i class="bx bxl-instagram-alt"></i></a>
               <a href="https://youtube.com/@scottjsh" target="_blank" class="youtube"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><rect width="24" height="24" fill="none"/><path fill="currentColor" fill-rule="evenodd" d="M9.935 14.628v-5.62l5.403 2.82zM21.8 8.035s-.195-1.379-.795-1.986c-.76-.796-1.613-.8-2.004-.847C16.203 5 12.004 5 12.004 5h-.008s-4.198 0-6.997.202c-.391.047-1.243.05-2.004.847c-.6.607-.795 1.986-.795 1.986S2 9.653 2 11.272v1.517c0 1.618.2 3.237.2 3.237s.195 1.378.795 1.985c.76.797 1.76.771 2.205.855c1.6.153 6.8.2 6.8.2s4.203-.006 7.001-.208c.391-.047 1.244-.05 2.004-.847c.6-.607.795-1.985.795-1.985s.2-1.619.2-3.237v-1.517c0-1.619-.2-3.237-.2-3.237"/></svg></a>
               <a href="https://www.github.com/scottjsh" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-            
             </div>
           </div>
         </div>
@@ -160,7 +159,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <p>@js_hyun118</p>
             <h3>YouTube</h3>
             <p>Usermode(@scottjsh)</p>
-	    <h3>Valorant</h3>
+	          <h3>Valorant</h3>
             <p>KVT ZEKI#Z3K1</p>
           </div>
         </div>
@@ -186,12 +185,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <img src="assets/img/profile.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-		  <p style="font-size: 24px">Student developer interested in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I'm learning about <strong>AI</strong>, and <strong>Pytorch</strong> used for <strong>machine learning</strong>. I want to be a <strong>pilot</strong>. However, I got a <strong>pneumothorax</strong> and had a problem becoming a <strong>pilot</strong>. After entering the <strong>Korea Maritime University</strong>, not the <strong>Korea Aviation University</strong>, and raising funds through <strong>boarding ships for many years</strong>, I <strong>changed my plan</strong> to fill the flight time to join the airline. Entering straight to <strong>the Department of Aviation Operations</strong> does not have a <strong>Plan B</strong> when <strong>employment becomes impossible due to health</strong>.</p>
+		      <p style="font-size: 24px">Student developer interested in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I'm learning about <strong>AI</strong>, and <strong>Pytorch</strong> used for <strong>machine learning</strong>. I want to be a <strong>pilot</strong>.</p>
+          <p style="font-size: 24px">However, I got a <strong>pneumothorax</strong> and had a problem becoming a <strong>pilot</strong>. After entering the <strong>Korea Maritime University</strong>, not the <strong>Korea Aviation University</strong>, and raising funds through <strong>boarding ships for many years</strong>, I <strong>changed my plan</strong> to fill the flight time to join the airline. Entering straight to <strong>the Department of Aviation Operations</strong> does not have a <strong>Plan B</strong> when <strong>employment becomes impossible due to health</strong>.</p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-		<li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 18 January 2007</li>
-	        <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Nationality:</strong> South Korea</li>
+		            <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 18 January 2007</li>
+	              <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Nationality:</strong> South Korea</li>
                 <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Email:</strong> scottjsh@whitesky.kr</li>
               </ul>
             </div>
@@ -200,15 +200,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="col-lg-4" data-aos="fade-right">
           <img name="randomImage" class="img-fluid" alt="">
         </div>
-		<script>
-		random_img()
-		</script>
-		<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-		  <p style="font-size: 30px">I ❤️ <strong><a href="https://instagram.com/i_am_young22" target="_blank">Hina</a></strong></p>
-		  <p style="font-size: 30px"><a href="javascript:void(0);" onclick="random_img()"><br><br><strong>Click Here</strong></a></p>
-		</div>
+		    <script>
+		    random_img()
+		    </script>
+		    <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+		      <p style="font-size: 30px">I ❤️ <strong><a href="https://instagram.com/i_am_young22" target="_blank">Hina</a></strong></p>
+		      <p style="font-size: 30px"><a href="javascript:void(0);" onclick="random_img()"><br><br><strong>Click Here</strong></a></p>
+		    </div>
       </div>
-
     </div>
 	<!-- End About Me -->
   </section>
