--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <h3>Instagram</h3>
             <p>@js_hyun118</p>
             <h3>YouTube</h3>
-            <p>Zeki(@Zeki_KR)</p>
+            <p>Zeki_KR(@Zeki_KR)</p>
 	          <h3>Valorant</h3>
             <p>KVT ZEKI#Z3K1</p>
           </div>
