--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <img src="assets/img/profile.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-		      <p style="font-size: 24px">Student developer interested in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I'm learning about <strong>AI</strong>, and <strong>Pytorch</strong> used for <strong>machine learning</strong>. I want to be a <strong>pilot</strong>.</p>
-          <p style="font-size: 24px">However, I got a <strong>pneumothorax</strong> and had a problem becoming a <strong>pilot</strong>. After entering the <strong>Korea Maritime University</strong>, not the <strong>Korea Aviation University</strong>, and raising funds through <strong>boarding ships for many years</strong>, I <strong>changed my plan</strong> to fill the flight time to join the airline. Entering straight to <strong>the Department of Aviation Operations</strong> does not have a <strong>Plan B</strong> when <strong>employment becomes impossible due to health</strong>.</p>
+		      <p style="font-size: 24px">Student developer interested in: <strong>Python</strong>, <strong>JavaScript</strong>, <strong>Arduino</strong> and <strong>Security</strong>. I'm learning about <strong>AI</strong>, and <strong>Pytorch</strong> used for <strong>machine learning</strong>. But I want to be a <strong>pilot</strong>.</p>
+          <p style="font-size: 24px">However, I will have trouble becoming a <strong>pilot</strong> due to my history of <storng>pneumothorax</storng>. Therefore, I changed my plan to enter <strong>Korea Maritime & Ocean University</strong> instead of <strong>Korea Aerospace University</strong>, and after saving money by sailing for several years, I will fill the flight hours to join an airline. Entering the <strong>Department of Aviation Operations</strong> directly does not have a <strong>plan B</strong> in case I cannot get a job due to my <strong>health</strong>.</p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
