--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="col-lg-6">
               <ul>
 		            <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 18 January 2007</li>
-	              <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Nationality:</strong> South Korea</li>
+	              <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Nationality:</strong> Republic of Korea</li>
                 <li style="font-size: 18px"><i class="icofont-rounded-right"></i> <strong>Email:</strong> scottjsh@whitesky.kr</li>
               </ul>
             </div>
