--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		    </script>
 		    <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 		      <p style="font-size: 30px">I ❤️ <strong><a href="https://instagram.com/i_am_young22" target="_blank">Hina</a></strong></p>
-		      <p style="font-size: 30px"><a href="javascript:void(0);" onclick="random_img()"><br><br><strong>Click Here</strong></a></p>
+		      <p style="font-size: 30px"><a href="javascript:void(0);" onclick="random_img()"><br><br><strong>Change Image</strong></a></p>
 		    </div>
       </div>
     </div>
