--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["^500Intermediate Developer^300", "^500Deputy Manager of SJ Student Council^300", "^500good at Flght Simulators^300", "^500preparing for a soldier^300", "^500preparing for a Pilot^300"],
+      strings: ["^500Intermediate Developer^300", "^500Director of SJ Student Council^300", "^500good at Flght Simulators^300", "^500preparing for a CSAT^300"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 35,
