Update Valorant player tag format

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <h3>YouTube</h3>
             <p>Zeki_KR(@Zeki_KR)</p>
             <h3>Valorant</h3>
-            <p>KVT ZEKI#Z3K1</p>
+            <p>Zeki#Z3K1</p>
           </div>
         </div>
       </div>
